codex-rs/tui-bottom-pane/src/snapshots/codex_tui_bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
╭──────────────────────────────────────────────╮
│❯ Ask Codex to do anything                    │
╰──────────────────────────────────────────────╯
  ? for shortcuts            100% context left
