codex-rs/tui-bottom-pane/src/snapshots/codex_tui_bottom_pane__tests__status_hidden_when_height_too_small_height_1.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area1)"
---
› Ask Codex to do a
