codex-rs/tui-bottom-pane/src/snapshots/codex_tui_bottom_pane__tests__status_only_snapshot.snap
---
source: tui-bottom-pane/src/lib.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
╭──────────────────────────────────────────────╮
│❯ Ask Codex to do anything                    │
╰──────────────────────────────────────────────╯
  ? for shortcuts            100% context left
